--- a/src/styles/Window.module.css
+++ b/src/styles/Window.module.css
@@ -52,7 +52,7 @@
                         "section3"
                         "section4"
                         "section5";
-    grid-template-rows: 10% 15% 15%  15% 20% 25%; 
+    grid-template-rows: 15% 15% 15%  15% 20% 20%; 
     padding: 10px;
 }
 .p0{
@@ -60,6 +60,7 @@
     margin: 0;
     padding: 0;
     text-align: center;
+    font-size: 20px;
 }
 .p1{
     grid-area: top;
@@ -268,7 +269,7 @@
         padding: 15px;
     }
     .codigo1{
-        width: 90%;
+        width: 93%;
         height: 44%;
         display: flex;
         flex-direction: column;
@@ -276,7 +277,7 @@
         padding: 15px;
     }
     .codigo2{
-        width: 90%;
+        width: 93%;
         height: 44%;
         display: flex;
         flex-direction: column;
