--- a/src/styles/Window.module.css
+++ b/src/styles/Window.module.css
@@ -1,7 +1,26 @@
 .window{
     width: 100vw;
     height: 100vh;
-   background-color:  rgba(0, 0, 0, 0.053);
+   /* background-color:  rgba(0, 0, 0, 0.053); */
+   background-image: linear-gradient(
+  350deg,
+  hsl(240deg 96% 10%) 0%,
+  hsl(240deg 84% 14%) 1%,
+  hsl(240deg 74% 17%) 2%,
+  hsl(240deg 64% 22%) 4%,
+  hsl(240deg 56% 26%) 6%,
+  hsl(240deg 49% 31%) 8%,
+  hsl(240deg 42% 37%) 12%,
+  hsl(240deg 35% 42%) 17%,
+  hsl(240deg 30% 48%) 25%,
+  hsl(240deg 29% 55%) 36%,
+  hsl(240deg 31% 61%) 55%,
+  hsl(240deg 32% 68%) 74%,
+  hsl(240deg 34% 76%) 85%,
+  hsl(240deg 35% 83%) 92%,
+  hsl(240deg 37% 92%) 97%,
+  hsl(0deg 0% 100%) 100%
+);
     display: flex;
     justify-content: center;
 }
@@ -10,12 +29,12 @@
     display:grid;
     height: 100%;
     width: 1100px;
-    grid-template-areas: "top top  top"
+    grid-template-areas: "top top  top" 
                           "box1  box2 box3"
                           "box4  box2 box3"
                           "footer   footer  footer";
      grid-template-columns: 45% 18% 37%;
-     grid-template-rows: 15% 40%  40% 5%;                     
+     grid-template-rows: 15%  40%  40% 5%;                     
                                               
 }
 
@@ -27,8 +46,19 @@
     align-items: center;
     justify-content: center;
     color: aliceblue;
+    display: grid;
+    grid-template-areas: "button title"
+                        "button title";
+    grid-template-columns: 10% 90%;
+    grid-template-rows: 50% 50%;
 }
-
+.buttonVoltar{
+   grid-area: button;
+}
+.titles{
+    grid-area: title;
+    text-align: center;
+}
 .painel2{
     grid-area: box2;
     
@@ -120,6 +150,7 @@
 .img1{
     width: 370px;
     height: 200px;
+   
 }
 .titleCodigo{
     width: 100%;
@@ -128,6 +159,12 @@
     align-items: center;
     justify-content: center;
 }
+.bufferTitle{
+    height: 59px;
+    overflow: hidden;
+    margin-left: 3px;
+}
+
 .codigo2{
     width: 90%;
     height: 35%;
@@ -176,7 +213,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content:space-evenly;
 }
 .part1{
     grid-area: box1;
@@ -301,7 +338,7 @@
                               "box3"
                               "footer ";
          grid-template-columns: 100%;
-         grid-template-rows: 7% 20% 18% 10% 10% 30% 5%;                                   
+         grid-template-rows: 6% 22% 18% 9% 10% 31% 4%;                                   
                                               
 }
 .topBar h1{
@@ -337,8 +374,15 @@
 .bufferTitle{
     height: 59px;
     overflow: hidden;
+    background-color:  rgba(0, 0, 0, 0.125);
 }
 
+.painel3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 .codigo1{
     width: 75%;
     height: 45%;
@@ -350,6 +394,10 @@
     height: 50%;
    
 
+}
+.part2{
+    height: 300px;
+    justify-content: flex-start;
 }
 
 }
