--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -75,25 +75,27 @@
 }
 
   @media (max-width: 1000px){
-    .container{
-        height:  170%;
+    .main{
+       
+        height: 100vh;
+    }
+    .container1{
+        height:  100%;
     }
     .boxCards{
         
         align-items: center;
-        flex-direction: column;
-       flex-wrap: nowrap;
         
+       flex-wrap: wrap;
+        padding: 0px;
+        margin: 0px;
     }
     .card{margin: 15px;}
 } 
 
 @media (max-width: 668px){
-    .main{
-        width: 100%;
-        height: 100%;
-    }
-    .container{
+  
+    .container1{
         overflow: hidden;
         display: grid;
         width: 100%;
@@ -104,7 +106,7 @@
                             "footer";
         grid-template-columns: 100%;
         grid-template-rows: 10% 82% 3%;
-        overflow: hidden;
+        
     }
     
     
@@ -113,3 +115,26 @@
     }
   
 } 
+@media (max-width:330px) {
+    .card{
+        height: auto;
+    }
+    .main{
+        width: 100%;
+        height: auto;
+    }
+    .container1{
+        overflow: hidden;
+        display: grid;
+        width: 100%;
+        height: 200vh;
+       background-color: white;
+        grid-template-areas: "top"
+                            "main"
+                            
+                            "footer";
+        grid-template-columns: 100%;
+        grid-template-rows: 10% 85% 5%;
+       
+    }
+}
