--- a/src/styles/RR.module.css
+++ b/src/styles/RR.module.css
@@ -32,6 +32,7 @@
             hsl(240deg 37% 92%) 97%,
             hsl(0deg 0% 100%) 100%)
 }
+
 .switch {
     width: 55px;
     height: 28px;
@@ -43,26 +44,28 @@
     padding: 5px;
     cursor: pointer;
     margin-left: 20px;
-  }
-  
-  .switch[data-isOn="true"] {
+}
+
+.switch[data-isOn="true"] {
     justify-content: flex-end;
     background-color: rgba(0, 128, 0, 0.517);
-  }
-  
-  .handle {
+}
+
+.handle {
     width: 20px;
     height: 20px;
     background-color: rgb(255, 255, 255);
     border-radius: 40px;
-  }
-  .boxTungle{
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0px 80px 0px 80px;
-  }
+}
+
+.boxTungle {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 80px 0px 80px;
+}
+
 .item {
     height: 50px;
     border: 1px solid black;
@@ -77,7 +80,7 @@
     width: 160px;
 
     text-align: center;
-    
+
 
     display: flex;
     justify-content: space-around;
@@ -105,9 +108,11 @@
     font-size: 20px;
     padding-bottom: 20px;
 }
-.position{
+
+.position {
     width: 20%;
 }
+
 .cardVetor {
     width: 50%;
     display: flex;
@@ -161,18 +166,21 @@
     grid-template-columns: 100%;
     grid-template-rows: 30% 20% 50%;
 }
-.bufferTitle{
+
+.bufferTitle {
     width: 100%;
     height: 20%;
     display: flex;
     justify-content: center;
 }
-.fila{
+
+.fila {
     height: 80%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
+
 .footer {
     grid-area: footer;
     background-color: rgba(36, 36, 36, 0.323);
@@ -206,7 +214,8 @@
     justify-content: center;
 
 }
-.cpuFront{
+
+.cpuFront {
     height: 75%;
     width: 70%;
     border-radius: 10%;
@@ -225,10 +234,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    
-        
-        background-image: url(../img/cpu.PNG);
-        background-size:100% 100%;
+
+
+    background-image: url(../img/cpu.PNG);
+    background-size: 100% 100%;
 }
 
 .quantumBox {
@@ -238,45 +247,105 @@
     align-items: center;
     justify-content: center;
 }
+
 @media (max-width:980px) {
-    .painel1{
+    .painel1 {
         height: 40%;
     }
-    .painel2{
+
+    .painel2 {
         height: 60%;
     }
-    .vetorProntos{
+
+    .vetorProntos {
         width: 300px;
     }
 }
+
 @media (max-width:768px) {
     .caontainerMain {
         width: 100%;
         height: 200vh;
         display: grid;
         grid-template-areas: "top "
-                             "part1 "
-                             "part2"
-                             "footer";
-        grid-template-columns: 100% ;
+            "part1 "
+            "part2"
+            "footer";
+        grid-template-columns: 100%;
         grid-template-rows: 10% 40% 45% 5%;
-    
+
     }
+
     .container1 {
         height: 250vh;
     }
 }
-@media (max-width:300px) {
+
+@media (max-width:330px) {
+    .part2 {
+        grid-area: part2;
+        display: grid;
+        grid-template-areas: "p1"
+            "p1"
+            "p2";
+        grid-template-columns: 100%;
+        grid-template-rows: 25% 10% 65%;
+    }
+    .container1 {
+        width: 100%;
+        height: 100%;
+    }
+
     .caontainerMain {
         width: 100%;
         height: 200vh;
-        display: grid;
-        grid-template-areas: "top "
-                             "part1 "
-                             "part2"
-                             "footer";
-        grid-template-columns: 100% ;
-        grid-template-rows: 10% 40% 45% 5%;
-    
     }
+
+    .textPriorizar {
+        font-size: 15px;
+
+    }
+
+    .boxTungle {
+        padding: 0px;
+    }
+
+    .painel2 h3 {
+        font-size: 15px;
+    }
+    
+
+    .addandRemove {
+        margin: 0px !important;
+    }
+
+    .cpu {
+        height: 120px;
+        width: 120px;
+    }
+    .cpuArea{
+        height: 200px;
+        
+    }
+    .lista {}
+
+    .vetorProntos {
+
+        width: 90%;
+        height: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border-radius: 46px;
+        background: linear-gradient(145deg, #f0f0f0, #cacaca);
+        box-shadow: 30px 30px 51px #929292,
+            -30px -30px 51px #ffffff;
+    }
+
+    .spanVetor {
+        padding: 3px;
+    }
+
+
 }
