--- a/src/styles/RR.module.css
+++ b/src/styles/RR.module.css
@@ -45,26 +45,31 @@
     cursor: pointer;
     margin-left: 20px;
 }
-.addandRemove{
-   height: 15%;
-   width: 30%;
+
+.addandRemove {
+    height: 15%;
+    width: 30%;
 }
-.TimerBox{
+
+.TimerBox {
     height: 15%;
     display: flex;
     justify-content: space-between;
 }
-.buttons{
+
+.buttons {
     height: 15%;
 }
-.prioridadeBox{
-  
+
+.prioridadeBox {
+
     display: flex;
     align-items: center;
     justify-content: space-between;
     height: 25%;
-    
+
 }
+
 .switch2 {
     width: 55px;
     height: 28px;
@@ -77,6 +82,7 @@
     cursor: pointer;
     margin-left: 20px;
 }
+
 .switch2[data-isOn2="true"] {
     justify-content: flex-end;
     background-color: rgba(0, 128, 0, 0.517);
@@ -100,7 +106,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 
 .item {
@@ -181,8 +187,8 @@
 
 .spanTimer {
     width: 70%;
-   
-    
+
+
 }
 
 .part1 {
@@ -193,7 +199,8 @@
 .buttonsInc:hover {
     background-color: rgba(63, 63, 63, 0.147);
 }
-.buttonsInc{
+
+.buttonsInc {
     height: 50px;
     width: 50px;
     display: flex;
@@ -201,7 +208,9 @@
     justify-content: center;
     cursor: pointer;
 }
+
 .part2 {
+
     grid-area: part2;
     display: grid;
     grid-template-areas: "p1"
@@ -235,7 +244,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    
+
 }
 
 .painel2 {
@@ -294,21 +303,24 @@
     align-items: center;
     justify-content: center;
 }
-.prioriBox{
+
+.prioriBox {
     width: 100%;
     height: 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
-   
+
 }
-.prioriButtons{
+
+.prioriButtons {
     width: 30%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
-.priori1{
+
+.priori1 {
     height: 25px;
     width: 25px;
     border-radius: 50%;
@@ -316,8 +328,33 @@
     align-items: center;
     justify-content: center;
     cursor: pointer;
-   
+
 }
+
+@media (max-height: 768px) {
+
+    .item {
+        height: 75px;
+        border: 1px solid black;
+        width: 40px;
+
+        text-align: center;
+    }
+
+    .painel1 {
+        height: 30%;
+    }
+
+    .painel2 {
+        height: 70%;
+    }
+
+    .vetorProntos {
+        width: 60%;
+        height: 100%;
+    }
+}
+
 @media (max-width:980px) {
     .painel1 {
         height: 40%;
@@ -330,9 +367,10 @@
     .vetorProntos {
         width: 300px;
     }
-    .spanTimer h5{
+
+    .spanTimer h5 {
         font-size: 15px;
-        
+
     }
 }
 
@@ -353,14 +391,16 @@
     .container1 {
         height: 250vh;
     }
-    .priori1{
+
+    .priori1 {
         height: 20px;
         width: 20px;
-       
-       
+
+
     }
-  
+
 }
+
 @media (max-width:330px) {
     .part2 {
         grid-area: part2;
@@ -371,9 +411,11 @@
         grid-template-columns: 100%;
         grid-template-rows: 25% 10% 65%;
     }
-    .boxButton{
+
+    .boxButton {
         width: 90%;
     }
+
     .container1 {
         width: 100%;
         height: 100%;
@@ -396,24 +438,27 @@
     .painel2 h5 {
         font-size: 10px;
     }
+
     .painel2 span {
         font-size: 10px;
     }
-    
+
 
     .addandRemove {
         margin: 0px !important;
-       
+
     }
 
     .cpu {
         height: 120px;
         width: 120px;
     }
-    .cpuArea{
+
+    .cpuArea {
         height: 200px;
-        
+
     }
+
     .lista {}
 
     .vetorProntos {
@@ -433,18 +478,21 @@
     .spanVetor {
         padding: 3px;
     }
-    .priori1{
+
+    .priori1 {
         height: 15px;
         width: 15px;
-       
-       
+
+
     }
+
     .handle {
         width: 10px;
         height: 10px;
         background-color: rgb(255, 255, 255);
         border-radius: 40px;
     }
+
     .switch {
         width: 35px;
         height: 20px;
@@ -457,6 +505,7 @@
         cursor: pointer;
         margin-left: 20px;
     }
+
     .switch2 {
         width: 35px;
         height: 20px;
@@ -469,6 +518,7 @@
         cursor: pointer;
         margin-left: 20px;
     }
+
     .item {
         height: 75px;
         width: 41px;
