--- a/src/styles/RR.module.css
+++ b/src/styles/RR.module.css
@@ -292,7 +292,7 @@
     justify-content: center;
 
 
-    background-image: url(../img/cpu.PNG);
+    /* background-image: url(../img/cpu.PNG); */
     background-size: 100% 100%;
 }
 
